# camyll

./: .gitignore  CHANGES.md  LICENSE  README.md  camyll.opam  docs.html  dune-project  index.html  site.css
.github/workflows/: main.yaml  main.yml  pages.yaml  test.yaml
docs/: README.md  commands.html  config.toml  config.yml  configuration.html  highlighting.html  index.html  pages.html  taxonomies.html  templates.html
docs/includes/: head.html  head.jingoo  header.jingoo
docs/public/: index.html
docs/site/: docs.md  index.md
docs/site/docs/: configuration.md  index.md  templates.md
docs/templates/: main.html  main.jingoo
example/: config.toml
example/content/: agda.lagda.md  index.md
example/content/posts/: first-post.md  second-post.md  third-post.lagda.md
example/layouts/: main.jingoo  post.jingoo  posts.jingoo
example/partials/: head.jingoo  nav.jingoo
example/site/: agda.lagda.md  index.md
example/site/posts/: first-post.md  index.md  second-post.md  third-post.lagda.md
src/: README.md  build.ml  build.mli  camyll.ml  config.ml  dune  filesystem.ml  highlight.ml  new.ml  new.mli  otoml_impl.ml  serve.ml  url.ml  url.mli
test/unit/: test_color.ml  test_url.ml
web/: README.md  config.toml
web/content/: docs.css  index.html  site.css
web/content/docs/: commands.md  configuration.md  highlighting.md  index.md  pages.md  taxonomies.md  templates.md
web/includes/: footer.jingoo  head.jingoo
web/partials/: footer.jingoo  head.jingoo
web/site/: index.md  site.css
web/site/docs/: configuration.md  index.md  pages.md  taxonomies.md  templates.md
web/templates/: home.jingoo  main.jingoo
